--- a/dicom.html
+++ b/dicom.html
@@ -3,7 +3,7 @@
 <IMG SRC="conquest.jpg" ALIGN="right" ALT="Developed in the Conquest project">
 <BR>
 <BR>
-<H1>Conquest DICOM software 1.5.0c</H1>August 28, 2022;
+<H1>Conquest DICOM software 1.5.0f</H1>August 31, 2025;
 <br>
 <br>
 <A HREF="https://forum.image-systems.biz/forum/index.php?board/33-conquest-users/">Please have a look at the Forum for questions and answers</A>
@@ -61,7 +61,7 @@ Complete DICOM server offering storage, verification, query and retrieve with pr
 <P>The server can act as an advanced (Lua) scriptable DICOM image forwarder, processor and/or DICOM image cache.
 <P>The server integrates a small web client that also acts as a viewer.
 <P>The server and its webserver operation can be scripted in Lua for any type of processing and extension.
-<P>A partial DICOMWeb interface is provided that works well with OHIF
+<P>A DICOMWeb interface is provided that works well with OHIF.
 <P>
 
 <P ALIGN="center"><IMG SRC="ZeroBraneStudio_Conquest.jpg" ALT="dicom browser"></P>
@@ -77,15 +77,18 @@ Complete DICOM server offering storage, verification, query and retrieve with pr
 [Version 1.5.0 released (15 March 2020), Open source release on Github; Implements a small built-in web server, web page and server command attachfile; multi-threaded move and forwards, more scripting features and servercommands, a Lua console using IUP, better Linux options, scriptable dicom echo, etc.]
 [Version 1.5.0a released (20 June 2020), Fixes in compression and rare data corruption under Linux; web tool extensions]
 [Version 1.5.0b released (2 November 2020), Web with login; some bug fixes and faster anonymisation]
-[Version 1.5.0c released (?? 2022), Fixes, Json and DICOMWeb support; regenerate with wildcard; hash anonymisation; allow rename images]
+[Version 1.5.0c released (31 August 2022), Fixes, Json and DICOMWeb support; regenerate with wildcard; hash anonymisation; allow rename images]
+[Version 1.5.0d released (1 July 2023), Fixes (including CGET) and improvements to web access]
+[Version 1.5.0e released (26 September 2024), Fixes some bugs, e.g. in webserver Ladle; support MONOCHROME1, DICOM updates, lua: filenamesyntax, json]
+[Version 1.5.0f released (31 August 2025), Fixes some bugs, and minor enhancements
   <P>
-    <A HREF="http://ingenium.home.xs4all.nl/dicomserver/dicomserver150b.zip">
-      Download <B>dicomserver150c.zip</B> (23 MB, DICOM server + documentation + sample data + source + IDE integration)
+    <A HREF="http://www.natura-ingenium.nl/dicomserver/dicomserver150f.zip">
+      Download <B>dicomserver150f.zip</B> (33 MB, DICOM server + documentation + sample data + source + IDE integration + web apps)
     </A>
     <br>
     <br>
-    <A HREF="https://github.com/marcelvanherk/Conquest-DICOM-Server/commit/81b480c0b176f7036be0966e948118d32f4edae1">
-      Browse dicomserver150b release source code on <B>GitHub</B>
+    <A HREF="https://github.com/marcelvanherk/Conquest-DICOM-Server/commit/3722dd648a905a9591cc31c016674ae3578a3ac4">
+      Browse dicomserver150f release source code on <B>GitHub</B>
     </A>
     <br>
     <br>
@@ -104,7 +107,7 @@ Complete DICOM server offering storage, verification, query and retrieve with pr
 
 Marcel van Herk
 <BR>University of Manchester
-<BR>Please check first our new <A HREF="https://forum.image-systems.biz/forum/index.php?board/33-conquest-users/">FORUM</A> (kindly hosted by the <A HREF="http://www.k-pacs.net">K-PACS</A> team).
+<BR>Please check first our new <A HREF="https://forum.iq-image.com/forum/index.php?board/33-conquest-users/">FORUM</A> (kindly hosted by the <A HREF="https://www.iq-image.com/">IQ-Image</A> team).
 
 <H3>Technical Contact, original MicroPACS (no longer active)</H3>
 
@@ -117,7 +120,7 @@ Mark Oskin
 Richard L. Kennedy
 <BR>UC Davis Medical Center
 
-<P>Copyright (c) 2022 University of Manchester.
+<P>Copyright (c) 2025 University of Manchester.
 Developed by Marcel van Herk, Lambert Zijp and Jan Meinders; the Netherlands Cancer Institute; Radiotherapy Department; maintained by Marcel van Herk, University of Manchester.
 
 <P>Copyright (c) 1995 Regents of the University of California.  All rights reserved.
@@ -127,7 +130,7 @@ Developed by: Mark Oskin, mhoskin@ucdavis.edu; University of California, Davis M
 
 <HR>
 
-<BR>Please first check our <A HREF="https://forum.image-systems.biz/forum/index.php?board/33-conquest-users/">FORUM</A> (kindly hosted by the <A HREF="http://www.k-pacs.net">K-PACS</A> team).
+<BR>Please first check our <A HREF="https://forum.iq-image.com/forum/index.php?board/33-conquest-users/">FORUM</A> (kindly hosted by the <A HREF="https://www.iq-image.com/">IQ-Image</A> team).
 
 </BODY>
 </HTML>
